--- a/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
+++ b/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="zedit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VKG-as-Kdv">
-                                <rect key="frame" x="142" y="372" width="108" height="108"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zedit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VKG-as-Kdv">
+                                <rect key="frame" x="142.66666666666666" y="372" width="108" height="108"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="108" id="R9N-wG-v2w"/>
+                                    <constraint firstAttribute="width" constant="108" id="vxD-n4-VcO"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -33,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="zedit_logo" width="80" height="80"/>
+        <image name="zedit_logo" width="1024" height="1024"/>
     </resources>
 </document>
