--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -353,28 +353,33 @@
                                         <color key="textColor" systemColor="systemRedColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
-                                        <rect key="frame" x="0.0" y="111.99999999999999" width="393" height="34.333333333333329"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" image="video.fill" catalog="system" title="Select Video"/>
-                                        <connections>
-                                            <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
-                                        </connections>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hev-bh-iPS">
-                                        <rect key="frame" x="0.0" y="157.33333333333331" width="393" height="512.33333333333348"/>
+                                        <rect key="frame" x="0.0" y="112" width="393" height="518.33333333333337"/>
                                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kO5-TQ-z95">
-                                        <rect key="frame" x="0.0" y="680.66666666666663" width="393" height="34.333333333333371"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Create Project">
-                                            <color key="baseBackgroundColor" systemColor="systemBlueColor"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <segue destination="9Lp-0K-qM7" kind="show" identifier="Create" id="qwn-dj-PL0"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="j8e-l5-eHH">
+                                        <rect key="frame" x="0.0" y="641.33333333333337" width="393" height="73.666666666666629"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="34.333333333333336"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" title="Change Clip"/>
+                                                <connections>
+                                                    <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kO5-TQ-z95">
+                                                <rect key="frame" x="0.0" y="39.333333333333258" width="393" height="34.333333333333343"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" title="Create Project">
+                                                    <color key="baseBackgroundColor" systemColor="systemBlueColor"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <segue destination="9Lp-0K-qM7" kind="show" identifier="Create" id="qwn-dj-PL0"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -712,6 +717,7 @@
                                         <rect key="frame" x="0.0" y="38" width="377" height="62.333333333333343"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="62.333333333333343" id="dRC-ux-eTm"/>
                                             <constraint firstAttribute="height" constant="60" id="evi-oj-3QU"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HqD-C5-p3V">
@@ -739,13 +745,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
-                                        <rect key="frame" x="0.0" y="158.33333333333329" width="377" height="371.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="158.33333333333329" width="377" height="401.66666666666674"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="anf-Uy-gdd">
-                                        <rect key="frame" x="0.0" y="550" width="377" height="90"/>
+                                        <rect key="frame" x="0.0" y="580" width="377" height="60"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="90" id="FuO-da-vyE"/>
+                                            <constraint firstAttribute="height" constant="60" id="FuO-da-vyE"/>
                                         </constraints>
                                         <viewLayoutGuide key="contentLayoutGuide" id="PIJ-yh-O6B"/>
                                         <viewLayoutGuide key="frameLayoutGuide" id="zxk-ge-F3S"/>
@@ -1212,7 +1218,6 @@
         <image name="diamond.circle" catalog="system" width="128" height="123"/>
         <image name="photo.badge.plus" catalog="system" width="128" height="97"/>
         <image name="square.and.arrow.up" catalog="system" width="110" height="128"/>
-        <image name="video.fill" catalog="system" width="128" height="81"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
